Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139304

QML text with heading role is not read by screenreader

XMLWordPrintable

    • Linux/Wayland, Linux/X11
    • 776007523 (dev), 75f8c3db8 (6.10), 493522d18 (6.9)

      Consider the following code:

      import QtQuick
      import QtQuick.Controls
      
      Column {
          Label {
              text: "Hello"
              focusPolicy: Qt.TabFocus
          }
          Label {
              text: "Hello"
              focusPolicy: Qt.TabFocus
              Accessible.role: Accessible.Heading
          }
      } 

      Orca (correctly ) reads the first Label as "Hello", but the second one is announced as "Heading", without the actual text.

        For Gerrit Dashboard: QTBUG-139304
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            nicolasfella Nicolas Fella
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes