a11y: Enable TextInterface for text with heading role

Headings are text-ish, so screenreaders need to be able to read
the text.

Fixes: QTBUG-139304
Change-Id: Ic2af6f64c0325b5390a46d8fd01a49b1f7036a8a
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 776007523b068f6eb430a831d782950a4cd0e63d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 75f8c3db80bfba3a2529b68b49a294dc03b3d7eb)